--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!titleSelected" class="titleList">
+<!-- <div *ngIf="!titleSelected" class="titleList">
     <input [(ngModel)]='movieTitle' id='search' name="searchInput"/>
     <div *ngIf="movieTitle">
         <table>
@@ -27,4 +27,35 @@
     <agm-map [latitude]='mapOptions.lat' [longitude]='mapOptions.lng' [zoom]='mapOptions.zoom'>
       <agm-marker *ngFor="let locObj of currentMovieLocationsCoordinates" [latitude]="locObj.lat" [longitude]="locObj.lng"></agm-marker>
     </agm-map>
+</div> -->
+
+
+<div class="titleList">
+    <div>
+      <input [(ngModel)]='movieTitle' id='search' name="searchInput"/>
+    </div>
+    <div *ngIf="movieTitle">
+      <table *ngIf="!titleSelected">
+          <tbody>
+              <tr *ngFor="let item of searchItems" (click)="onTitleSelect(item)" class="display-block">
+                  <td class="display-block"><b></b>{{ item }}</td>
+              </tr>
+          </tbody>
+      </table>
+      <table *ngIf="titleSelected">
+          <tbody>
+              <tr *ngFor="let locObj of locations">
+                  <td>{{ locObj.title }}</td>
+                  <td>{{ locObj.locations }}</td>
+              </tr>
+          </tbody>
+      </table>
+    </div>
+</div>
+   
+<div *ngIf="movieTitle" class="mapDiv">
+    <agm-map [latitude]='lat' [longitude]='lng'>
+      <agm-marker *ngFor="let locObj of locations" [latitude]="locObj.lat" [longitude]="locObj.lng"></agm-marker>
+    </agm-map>
+
 </div>
