--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,35 +1,3 @@
-<!-- <div *ngIf="!titleSelected" class="titleList">
-    <input [(ngModel)]='movieTitle' id='search' name="searchInput"/>
-    <div *ngIf="movieTitle">
-        <table>
-            <tbody>
-                <tr *ngFor="let item of searchItems" (click)="onTitleSelect(item)">
-                    <td>{{ item }}</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-</div>
-<div *ngIf="titleSelected" class="locationList">
-    <input [(ngModel)]='movieTitle' id='search' name="searchInput"/>
-    <div *ngIf="movieTitle">
-            <table>
-                <tbody>
-                    <tr *ngFor="let locObj of locations">
-                        <td>{{ locObj.title }}</td>
-                        <td>{{ locObj.locations }}</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-</div>
-<div *ngIf="movieTitle" class="mapDiv">
-    <agm-map [latitude]='mapOptions.lat' [longitude]='mapOptions.lng' [zoom]='mapOptions.zoom'>
-      <agm-marker *ngFor="let locObj of currentMovieLocationsCoordinates" [latitude]="locObj.lat" [longitude]="locObj.lng"></agm-marker>
-    </agm-map>
-</div> -->
-
-
 <div class="titleList">
     <div>
       <input [(ngModel)]='movieTitle' id='search' name="searchInput"/>
@@ -53,9 +21,9 @@
     </div>
 </div>
    
-<div *ngIf="movieTitle" class="mapDiv">
+<div class="mapDiv">
     <agm-map [latitude]='mapOptions.lat' [longitude]='mapOptions.lng' [zoom]='mapOptions.zoom'>
-      <agm-marker *ngFor="let locObj of currentMovieLocationsCoordinates" [latitude]="locObj.lat" [longitude]="locObj.lng"></agm-marker>
+      <agm-marker *ngFor="let locObj of commonService.currentMovieLocationsCoordinates" [latitude]="locObj.lat" [longitude]="locObj.lng"></agm-marker>
     </agm-map>
 
 </div>
