--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,21 @@
 <div class="titleList">
     <div>
-      <input [(ngModel)]='movieTitle' id='search' name="searchInput" />
+      <input [(ngModel)]='movieTitle' placeholder="Enter the movie name" id='search' name="searchInput" />
     </div>
     <div *ngIf="movieTitle">
       <div class="movie-container" *ngIf="!titleSelected">
         <table class="movie-list-table">
           <tbody>
             <tr *ngFor="let item of searchItems" (click)="onTitleSelect(item)" class="display-block cursor-pointer">
-              <td class="display-block movie-name-row"><b></b>{{ item }}</td>
+              <td class="display-block movie-name-row"><b>{{ item }}</b></td>
             </tr>
           </tbody>
-        </table>
+        </table>      
       </div>
       <div class="movie-container" *ngIf="titleSelected">
         <table class="movie-detail-table">
           <tbody>
-            <tr *ngFor="let locObj of locations" class="display-block cursor-pointer movie-detail-row">
+            <tr *ngFor="let locObj of locations" class="display-block movie-detail-row">
               <td class="display-block movie-title">{{ locObj.title }}</td>
               <td class="display-block"><b>Location:</b>{{ locObj.locations }}</td>
             </tr>
